syntax = "proto3";
package pryzmatics.trade;

import "gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";
import "cosmos_proto/cosmos.proto";
import "pryzm/amm/v1/order.proto";

option go_package = "github.com/pryzm-finance/pryzmatics/types/trade";

enum OrderStatus {
  option (gogoproto.goproto_enum_prefix) = false;
  ORDER_STATUS_UNKNOWN = 0;
  ORDER_STATUS_SCHEDULE_QUEUE = 1;
  ORDER_STATUS_EXECUTION_QUEUE = 2;
  ORDER_STATUS_CANCELED = 3;
  ORDER_STATUS_FINISHED = 4;
  ORDER_STATUS_DEPOSIT_FAILED = 5;
}

enum QueryOrderStatus {
  option (gogoproto.goproto_enum_prefix) = false;
  QUERY_ORDER_STATUS_ANY = 0;
  QUERY_ORDER_STATUS_SCHEDULE_QUEUE = 1;
  QUERY_ORDER_STATUS_EXECUTION_QUEUE = 2;
  QUERY_ORDER_STATUS_CANCELED = 3;
  QUERY_ORDER_STATUS_FINISHED = 4;
  // LIVE is SCHEDULE or EXECUTION
  QUERY_ORDER_STATUS_LIVE = 5;
  // NOT_LIVE is CANCELED or FINISHED
  QUERY_ORDER_STATUS_NOT_LIVE = 6;
  QUERY_ORDER_STATUS_DEPOSIT_FAILED = 7;
}

message Order {
  pryzm.amm.v1.Order amm_order = 1 [(gogoproto.nullable) = false];
  google.protobuf.Timestamp creation_time = 2 [(gogoproto.stdtime) = true, (gogoproto.nullable) = false];
  string total_amount = 3 [
    (cosmos_proto.scalar) = "cosmos.Int",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.nullable) = false
  ];
  string progress = 4 [
    (cosmos_proto.scalar) = "cosmos.Dec",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false
  ];
  string amount_out = 14 [
    (cosmos_proto.scalar) = "cosmos.Int",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.nullable) = false
  ];
  OrderStatus status = 15;
  google.protobuf.Timestamp status_time = 16 [(gogoproto.stdtime) = true, (gogoproto.nullable) = false];
  google.protobuf.Timestamp next_step_time = 17 [(gogoproto.stdtime) = true, (gogoproto.nullable) = true];
}

message MatchableOrderCount {
  uint64 pool_id = 1;
  string token_in = 2;
  string token_out = 3;
  bool whitelisted_route = 4;
  uint64 buy_count = 5;
  uint64 sell_count = 6;
}

message OrderCreatorBalance {
  string creator = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  string denom = 2;
  string balance = 3 [
    (cosmos_proto.scalar) = "cosmos.Int",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.nullable) = true
  ];
  // counts the number of matchable orders selling this token,
  // when this count gets to zero, we remove the data from database
  uint64 order_count = 4;
}

message MatchableOrder{
  uint64 id = 1;
  string creator = 2  [(cosmos_proto.scalar) = "cosmos.AddressString"];
  uint64 pool_id = 3;
  string token_in = 4;
  string token_out = 5;
  bool whitelisted_route = 6;
  string deposited_amount = 7[
    (cosmos_proto.scalar) = "cosmos.Int",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.nullable) = false
  ];
  string remaining_amount = 8 [
    (cosmos_proto.scalar) = "cosmos.Int",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.nullable) = false
  ];
  string balance = 9 [
    (cosmos_proto.scalar) = "cosmos.Int",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.nullable) = false
  ];
  string max_matching_spot_price = 10 [
    (cosmos_proto.scalar) = "cosmos.Dec",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = true
  ];
  OrderStatus status = 11;
}
